# projet_sdl_C

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  game_of_life.cfg
src/: app.c  app.h  config.c  config.h  io.c  io.h  main.c  simulation.c  simulation.h  world.c  world.h
